# AwakeVerify

./: .gitignore  AGENTS.md  README.md
.devcontainer/: .env.example  Dockerfile  devcontainer-lock.json  devcontainer.json  docker-compose.yml  post-create.sh  servicebus-config.json
.github/workflows/: publish-ghcr.yml
docs/: progress-report-claude-design-prompt.md  proposal.md  technical-presentation-claude-design-prompt.md
docs/backend/: spec.md
docs/features/: 01-student-session-start.md  02-webcam-capture.md  03-video-frame-sending.md  04-frame-storage-and-queue.md  05-frame-decoding.md  06-face-recognition.md  07-calibration.md  08-drowsiness-scoring.md  09-realtime-notification.md  10-auto-pause-resume.md  11-playback-event-recording.md  12-teacher-login.md  13-teacher-account-management.md  14-teacher-dashboard.md  15-elastic-session-frame-processing.md  README.md
docs/frontend/: spec.md
docs/implementation-plans/: azure-demo-operation-plan.md  implementation-agent-prompt.md  mobile-responsive-implementation-prompt.md  (+1 more)
src/worker/: Dockerfile  pyproject.toml  requirements.txt
src/worker/app/: auth.py  main.py  perclos.py
src/worker/app/analyzer/: frame_decoder.py
src/worker/gui/: README.md  __init__.py  main.py
src/worker/shared/: __init__.py
src/worker/shared/tracking/: __init__.py  calibration.py  drowsiness.py  face_analyzer.py  models.py
src/worker/tests/: test_calibration.py  test_drowsiness.py  test_face_analyzer.py  test_frame_decoder.py  test_session_concurrency.py  test_startup_checks.py  test_worker_reliability.py
(+206 files in other folders)
